<resources>
    <string name="app_name">GPower</string>
    <string name="power_status">Power Status</string>
    <string name="day_or_night">day or night</string>
    <string name="remaining_power">Power Left</string>
    <string name="cut_power">Power cut</string>
    <string name="supplied_power">Power Supplied</string>
    <string name="alert_me">Alert me</string>
    <string name="when_power_on">When power ON</string>
    <string name="when_power_off">When power OFF</string>
    <string name="settings">Settings</string>
    <string name="hours">Hour</string>
    <string name="default_notification_channel_id">message</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>